# hub

./: .gitignore  .mcp.json  CLAUDE.md  CONTRACT.md  README.md  dashboard-redesign.md  dashboard.html  zenoh-migration.md
.claude/: settings.json  statusline.sh
.claude/skills/verify/: SKILL.md
.github/workflows/: broker-tests.yml  build-hubd.yml  build-image.yml  build-provisiond.yml  captive-contract.yml  release-hubd.yml  release-mcpb.yml
envelopes/: estop.json  imu.json  pwm.json  rpc_set_led.json
esp32/: .gitignore  CMakeLists.txt  DESIGN-unified.md  README.md  sdkconfig.defaults
esp32/main/: CMakeLists.txt  hub_broker_main.c  idf_component.yml  ws_mqtt_bridge.c
mcp-bridge/: README.md  hub_mcp.py  hub_mcp_zenoh.py  manifest.json  requirements.txt
pi/: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  classroom.example.json5  mosquitto-acl.example.conf  mosquitto.example.conf  zenoh-router.example.json5
pi/deploy/: README.md  hub-ap-setup.sh  hub-ap.service  hub-login-banner.sh  hub-uplink-watchdog.service  hub-uplink-watchdog.sh  hubd.service  install.sh  mosquitto.conf  payload.tsv  provisiond.service  usb-gadget-setup.sh  usb-gadget.service  ws-adapter.service  zenohd.service
pi/examples/: classroom-mosquitto-demo.sh  ws-transport-test.py
pi/image/: README.md  customize-image.sh
pi/image/stage-hub/: EXPORT_IMAGE  prerun.sh
pi/image/stage-hub/00-hub/: 00-packages  00-run.sh  01-run-chroot.sh
pi/src/: codes.rs  improv.rs  lib.rs  welcome.html  wifi.rs
pi/tools/: check-captive-probes.py  deploy-hubd.sh  pi-serial.py  reprovision.py
pi/ws-adapter/: README.md  ws_zenoh_adapter.py
