[package]
name = "hub"
version = "0.1.0"
edition = "2021"
description = "The classroom Robotics Hub — MQTT transport variant. hubd serves the dashboard/BLE chassis only; Mosquitto (a separate process) is the broker every MQTT party talks to directly, see hub-mqtt#1"
license = "MIT"

# Cargo auto-discovers src/lib.rs (crate `hub`) and src/bin/*.rs (hubd, provisiond).
# No MQTT client crate here — hubd isn't an MQTT client (2026-07-08: scoping
# moved to Mosquitto's own ACL, browsers connect with mqtt.js directly; see
# CLAUDE.md § Architecture and mosquitto.example.conf).

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
futures = "0.3"                # provisiond only (FutureExt)

# provisiond only, behind the `ble` feature — two independent gates. The
# target-cfg keeps bluer off macOS dev machines and the static-musl hubd
# target (musl has no libdbus). `optional` + the feature keeps it off the
# *native-gnu* hubd build too (build-hubd.yml, ubuntu-22.04-arm): that build
# also matches target_env = "gnu", so the target-cfg alone still pulled
# bluer/libdbus-sys into a binary that never calls it, and failed on
# runners without libdbus-1-dev installed. gnu = provisiond's native arm64
# build; hubd (musl or gnu) never opts into `ble` and stays lean.
[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
uuid = { version = "1", optional = true }

[features]
ble = ["dep:bluer", "dep:uuid"]
