[package]
name = "hub"
version = "0.1.0"
edition = "2021"
description = "The classroom Robotics Hub — MQTT-transport variant. hubd serves the dashboard and device-served Wi-Fi setup (/wifi/*, via nmcli); Mosquitto (a separate process) is the broker every MQTT party talks to directly, see hub-mqtt#1"
license = "MIT"

# Cargo auto-discovers src/lib.rs (crate `hub`) and src/bin/hubd.rs.
# No MQTT client crate here — hubd isn't an MQTT client (2026-07-08: scoping
# moved to Mosquitto's own ACL, browsers connect with mqtt.js directly; see
# CLAUDE.md § Architecture and mosquitto.example.conf). Wi-Fi provisioning is
# now device-served over HTTP (nmcli shelled out from hubd, src/wifi.rs) — the
# BLE stack (bluer/uuid + the `provisiond` binary) was deleted 2026-07-09.

[dependencies]
tokio = { version = "1", features = ["full"] }
# Response compression (hubd.rs § gzip). Default features = the pure-Rust
# miniz_oxide backend, deliberately: the release build is static musl/arm64,
# and a zlib-sys backend would drag a C toolchain into that.
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
