[package]
name = "hub"
version = "0.1.0"
edition = "2021"
description = "The classroom Robotics Hub. hubd serves the dashboard and device-served Wi-Fi setup (/wifi/*, via nmcli); the transport is zenohd + the ws-adapter (separate services), which every Zenoh party talks to directly"
license = "MIT"

# Cargo auto-discovers src/lib.rs (crate `hub`) and src/bin/hubd.rs.
# No transport-client crate here — hubd isn't a Zenoh client (2026-07-08: scoping
# moved off hubd; browsers reach the fabric through the ws-adapter beside zenohd;
# see CLAUDE.md § Architecture and zenoh-router.example.json5). Wi-Fi provisioning is
# now device-served over HTTP (nmcli shelled out from hubd, src/wifi.rs) — the
# BLE stack (bluer/uuid + the `provisiond` binary) was deleted 2026-07-09.

[dependencies]
tokio = { version = "1", features = ["full"] }
# Response compression (hubd.rs § gzip). Default features = the pure-Rust
# miniz_oxide backend, deliberately: the release build is static musl/arm64,
# and a zlib-sys backend would drag a C toolchain into that.
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"
